<resources>
        <string name="lorem_ipsum_long" translatable="false">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
        Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of
        type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap
        into electronic typesetting, remaining essentially unchanged.\n\n
        It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more
        recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. Lorem Ipsum is
        simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy
        text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
        specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining
        essentially unchanged.
    </string>
    <string name="lorem_ipsum_short" translatable="false">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
        Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of
        type and scrambled it to make a type specimen book.
    </string>
    <string name="lorem_ipsum_short_2" translatable="false">Greyhound divisively hello coldly wonderfully marginally far upon excluding.</string>
    <string name="yes">Да</string>
    <string name="empty_str"></string>
    <string name="no">Нет</string>
    <string name="ok">ОК</string>
    <string name="open">Открыть</string>
    <string name="cancel">Отменить</string>
    <string name="cancellation">Отмена</string>
    <string name="call">Позвонить</string>
    <string name="apply">Применить</string>
    <string name="choose">Выбрать</string>
    <string name="back">Назад</string>
    <string name="continue_label">Далее</string>
    <string name="ready">Готово</string>
    <string name="action_start">Начать</string>
    <string name="send">Отправить</string>
    <string name="change">Изменить</string>
    <string name="save">Сохранить</string>
    <string name="label_share">Поделиться</string>
    <string name="dismiss">Скрыть</string>
    <string name="close">Закрыть</string>
    <string name="allow">Разрешить</string>
    <string name="reject">Отклонить</string>
    <string name="finish">Завершить</string>
    <string name="no_data">Нет данных</string>
    <string name="not_configured">Не указан</string>
    <string name="not_found">не найдено</string>
    <string name="invalid_token_title">Ошибка</string>
    <string name="invalid_token">Ошибка аутентификации</string>
    <string name="your_request_is_being_processed">Ваш запрос обрабатывается</string>
    <string name="success_response">Запрос успешно отправлен</string>
    <string name="info_empty_data">Отсутствуют данные</string>
    <string name="field_error">Данное поле требует заполнения</string>
    <string name="rationale_storage">Необходимо разрешить приложению доступ к файлам</string>
    <string name="loading">Загрузка&#8230;</string>
    <string name="connection_error">Сеть недоступна. Проверьте соединение с интернетом.</string>
    <string name="server_error">Сервис временно недоступен. Попробуйте позже.</string>
    <string name="error_occurred">Произошла ошибка. Попробуйте снова.</string>
    <string name="obtaining_data">Получение данных. Подождите, пожалуйста.</string>
    <string name="obtaining_data_fail">Произошла ошибка при получении данных.</string>
    <string name="try_again">Повторить попытку</string>
    <string name="please_wait">Подождите, пожалуйста.</string>
    <string name="click_here_to_repeat_request">Нажмите, чтобы повторить запрос.</string>
    <string-array name="months_array_long">
        <item>января</item>
        <item>февраля</item>
        <item>марта</item>
        <item>апреля</item>
        <item>мая</item>
        <item>июня</item>
        <item>июля</item>
        <item>августа</item>
        <item>сентября</item>
        <item>октября</item>
        <item>ноября</item>
        <item>декабря</item>
    </string-array>
    <string name="label_yesterday">вчера</string>
    <string name="enter_username">Логин AD (с которым входите в ваш компьютер)</string>
    <string name="enter_pwd">Пароль AD (с которым входите в компьютер)</string>
    <string name="label_login">Войти</string>
    <string name="forgot_your_data">Забыли свои данные для входа?</string>
    <string name="login_finger_print">Вход по отпечатку</string>
    <string name="login_with_login_pwd">Войти с помощью логина и пароля</string>
    <string name="put_your_finger">Поместите палец на\nклавишу \"Домой\"</string>
    <string name="hold_your_finger">Удерживайте палец на\nклавише \"Домой\" немного\nдольше</string>
    <string name="fingerprint_not_available">Функция \"Отпечаток пальца\" недоступна.</string>
    <string name="help">Помощь</string>
    <string name="help_description">Пароль необходимо сменить с вашего компьютера, нажав на ctrl+alt+delete и выбрав \"Сменить пароль\". Для подробной информации просим связаться с операторами Service desk по номеру 8 (7172)91-89-89.</string>
    <string name="copyright">BI Group %s</string>
    <string name="can_not_join">Не можете войти?</string>
    <string name="enter_phone_number">Введите имя пользователя или e-mail,\nи мы отправим Вам ссылку для\nвосстановления доступа к учетной записи.</string>
    <string name="label_phone">Телефон</string>
    <string name="date_of_birthday">Дата рождения</string>
    <string name="enter_phone">Введите номер телефона</string>
    <string name="new_pwd">Новый пароль</string>
    <string name="new_pwd_confirm">Повторите новый пароль</string>
    <string name="form_input_too_long">Максимальная длина строки превышена.</string>
    <string name="passwords_not_matches">Пароли не совпадают</string>
    <string name="pwd_success_changed">Ваш пароль успешно изменен</string>
    <string name="password_invalid_error">Длина пароля должен быть не менее 6 и не более 16 символов</string>
    <string name="menu_title_1">Обучение</string>
    <string name="menu_desc_1">2 новых видео</string>
    <string name="menu_title_2">Развитие</string>
    <string name="menu_desc_2">Просмотрено</string>
    <string name="menu_title_3">BI Wiki</string>
    <string name="menu_desc_3">Текст</string>
    <string name="menu_title_4">Questions</string>
    <string name="menu_desc_4">Последний вопрос</string>
    <string name="logout">Выход</string>
    <string name="logout_confirm">Вы действительно хотите выйти?</string>
    <string name="label_today">Сегодня</string>
    <string name="zayavki_i_zadachi">Заявки и задачи</string>
    <string name="kpi_proekty">KPI проекты</string>
    <string name="sandb">HR</string>
    <string name="idp">IDP</string>
    <string name="row_new">нов.</string>
    <string name="row_prin">прин.</string>
    <string name="row_pros">исход.</string>
    <string name="predlojeniya">Предложения</string>
    <string name="oprosnik">Опросник</string>
    <string name="question_top_7">Questions</string>
    <string name="novyh">новых</string>
    <string name="dni_rojdenya">дни рождения</string>
    <string name="vacancii">вакансии</string>
    <string name="label_all">все</string>
    <string name="label_popular">попул.</string>
    <string name="news">новости</string>
    <string name="main_news">Новость</string>
    <string name="label_feed">Лента</string>
    <string name="filter_all">Все</string>
    <string name="filter_news">Новости</string>
    <string name="filter_questionnaire">Опрос</string>
    <string name="filter_offer">Предложения</string>
    <string name="filter_poll">Опросы</string>
    <string name="label_author">Автор</string>
    <string name="label_questions">Вопросов</string>
    <string name="label_asked">Опрошенных</string>
    <string name="label_type">Тип</string>
    <string name="label_not_anonymous">Не анонимный</string>
    <string name="action_pass">Пройти</string>
    <string name="show_statistics">Просмотреть статистику</string>
    <string name="change_answers">Поменять ответы</string>
    <string name="employees_all">Все</string>
    <string name="employees_dob">Дни рождения</string>
    <string name="employees_vacancies">Вакансии</string>
    <string name="search_hint">Поиск</string>
    <string name="employees">Сотрудники</string>
    <string name="congratulate">Поздравить</string>
    <string name="congratulate_desc">с Днем рождения</string>
    <string name="dob_congrats_msg">Текст поздравления</string>
    <string name="notifications">Уведомления</string>
    <string name="tabs_data">Данные</string>
    <string name="tabs_results">Результаты</string>
    <string name="tabs_plans">Планы</string>
    <string name="tabs_advantages">Преимущества</string>
    <string name="label_profile">Профиль</string>
    <string name="prof_data_sub_company">Подразделение</string>
    <string name="prof_data_mobile">Мобильный</string>
    <string name="prof_data_email">Почта</string>
    <string name="prof_data_work_phone">Служебный телефон</string>
    <string name="prof_data_extra_info">Подробная информация</string>
    <string name="prof_data_hide_extra_info">Скрыть информацию</string>
    <string name="own_and_family">Личные и семья</string>
    <string name="label_iin">ИИН</string>
    <string name="label_date_of_birth">Дата рождения</string>
    <string name="label_family_status">Семейное положение</string>
    <string name="label_family_v_brake">В браке</string>
    <string name="label_family_gender">Пол</string>
    <string name="label_gender">Пол</string>
    <string name="label_gender_male">Мужской</string>
    <string name="label_gender_female">Женский</string>
    <string name="label_childs">Дети</string>
    <string name="label_childs_second">Двое</string>
    <string name="label_clothes_size">Размер одежды</string>
    <string name="label_working">Трудовая деятельность</string>
    <string name="label_experience">Общий стаж</string>
    <string name="label_coorporative_experience">Корпоративный стаж</string>
    <string name="developing_stage">Данный раздел в разработке. Приносим свои извинения за предоставленные неудобства. 🤗</string>
    <string name="label_medical">Медосмотр</string>
    <string name="last_medical">Последнее прохождение</string>
    <string name="closest_medical">Ближайшие</string>
    <string name="label_employee">Сотрудник</string>
    <string name="specialty">Должность</string>
    <string name="specialty_value">Должность: %s</string>
    <string name="salary">з/п: %s</string>
    <string name="login">Логин</string>
    <string name="manager">Руководитель</string>
    <string name="email">Почта</string>
    <string name="administrative_manager">Административный руководитель</string>
    <string name="functional_manager">Функциональный руководитель</string>
    <string name="title_task_sdesk">Заявки и задачи</string>
    <string name="inbox">Входящие</string>
    <string name="outbox">Исходящие</string>
    <string name="fb_it">IT отдел</string>
    <string name="fb_buhgalterya">Бухгалтерия</string>
    <string name="add_question">Добавить вопрос</string>
    <string name="new_suggestion">Новое предложение</string>
    <string name="attach">Прикрепить</string>
    <string name="write_content">Написать текст</string>
    <string name="new_task">Новая задача</string>
    <string name="label_title">Тема</string>
    <string name="label_notifications">Напоминание</string>
    <string name="start_date">Начало</string>
    <string name="end_date">Конец</string>
    <string name="choose_performer">Выбрать исполнителя</string>
    <string name="add_participants">Добавить участников</string>
    <string name="task_type">Тип задачи</string>
</resources>