<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/fl_parent"
             style="@style/MM">

    <LinearLayout
        android:id="@+id/ll_content"
        style="@style/LL_MM_V"
        android:background="@color/main_bg">

        <Button
            android:id="@+id/btn_tasks_sdesk"
            style="@style/MW"
            android:text="@string/title_task_sdesk"/>

        <Button
            android:id="@+id/btn_add_question"
            style="@style/MW"
            android:text="@string/add_question"/>

        <Button
            android:id="@+id/btn_new_suggestion"
            style="@style/MW"
            android:text="@string/new_suggestion"/>
    </LinearLayout>

    <include
        android:id="@+id/pb_indicator"
        layout="@layout/inc_pb_transparent"/>
</FrameLayout>