<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fl_parent"
    style="@style/MM"
    android:background="@drawable/gradient_blue_bg"
    android:fitsSystemWindows="true">

    <LinearLayout
        style="@style/LL_MM_V"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/img_close"
            style="@style/WW"
            android:layout_gravity="left"
            android:layout_marginLeft="@dimen/dp_25"
            android:layout_marginTop="@dimen/dp_25"
            android:src="@drawable/ic_close"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <bi.bigroup.life.views.fonts.TextViewOpenSansNeueMedium
                style="@style/WW"
                android:text="@string/can_not_join"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_17"/>

            <bi.bigroup.life.views.fonts.TextViewOpenSansNeueRegular
                style="@style/WW"
                android:layout_marginTop="@dimen/dp_5"
                android:gravity="center_horizontal"
                android:text="@string/enter_phone_number"
                android:textColor="@color/white_60"
                android:textSize="@dimen/sp_12"/>

            <bi.bigroup.life.views.fonts.TextViewOpenSansNeueRegular
                style="@style/WW"
                android:layout_gravity="left"
                android:layout_marginLeft="@dimen/dp_28"
                android:layout_marginTop="@dimen/dp_40"
                android:text="@string/label_phone"
                android:textColor="@color/white_60"
                android:textSize="@dimen/sp_12"/>

            <bi.bigroup.life.views.SettingsEditText
                android:id="@+id/et_phone"
                style="@style/et_auth"
                android:hint="@string/enter_phone"
                android:inputType="phone"
                android:maxLength="12"
                android:textColor="@color/white"
                app:met_textColor="@color/white"/>

            <View
                style="@style/auth_divider"/>

            <bi.bigroup.life.views.fonts.ButtonOpenSansRegular
                android:id="@+id/btn_send"
                style="@style/auth_rounded_btn"
                android:layout_marginLeft="@dimen/dp_25"
                android:layout_marginRight="@dimen/dp_25"
                android:layout_marginTop="@dimen/dp_28"
                android:text="@string/send"/>

        </LinearLayout>

        <bi.bigroup.life.views.fonts.TextViewOpenSansNeueMedium
            style="@style/MW"
            android:layout_marginBottom="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"
            android:gravity="center"
            android:text="@string/copyright"
            android:textColor="@color/white_60"
            android:textSize="@dimen/sp_13"/>

    </LinearLayout>

    <include
        android:id="@+id/pb_indicator"
        layout="@layout/inc_pb_transparent"/>

</FrameLayout>