<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fl_parent"
    style="@style/MM"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <LinearLayout
        style="@style/LL_MM_V"
        android:gravity="center_horizontal">

        <LinearLayout
            style="@style/MW"
            android:background="@drawable/gradient_blue_bg"
            android:gravity="center_horizontal|center_vertical"
            android:paddingBottom="@dimen/dp_30"
            android:paddingTop="@dimen/dp_30">

            <ImageView
                style="@style/ic_auth_logo"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password"
                style="@style/MW"
                android:layout_marginTop="@dimen/dp_13"
                android:hint="@string/enter_username"
                android:textColorHint="@color/et_hint">

                <bi.bigroup.life.views.edittext.SettingsEditText
                    android:id="@+id/et_username"
                    style="@style/et_auth"
                    android:layout_marginTop="@dimen/dp_40"
                    android:inputType="text"
                    android:maxLength="12"
                    android:textColorHint="@color/et_hint"/>
            </android.support.design.widget.TextInputLayout>

            <View
                style="@style/auth_divider"/>

            <android.support.design.widget.TextInputLayout
                style="@style/MW"
                android:layout_marginTop="@dimen/dp_7"
                android:hint="@string/enter_pwd"
                android:textColorHint="@color/et_hint">

                <bi.bigroup.life.views.edittext.SettingsEditText
                    android:id="@+id/et_pwd"
                    style="@style/et_auth"
                    android:layout_marginTop="@dimen/dp_12"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:textColorHint="@color/et_hint"/>
            </android.support.design.widget.TextInputLayout>

            <View
                style="@style/auth_divider"/>

            <bi.bigroup.life.views.fonts.ButtonRobotoRegular
                android:id="@+id/btn_login"
                style="@style/auth_rounded_btn"
                android:layout_marginTop="@dimen/dp_22"
                android:text="@string/label_login"/>

            <LinearLayout
                style="@style/LL_MW_H"
                android:layout_marginTop="@dimen/dp_28"
                android:gravity="center_horizontal|center_vertical"
                android:visibility="gone">

                <bi.bigroup.life.views.fonts.TextViewRobotoMedium
                    style="@style/WW"
                    android:text="@string/forgot_your_data"
                    android:textColor="@color/forgot_your_data"
                    android:textSize="@dimen/sp_13"/>

                <bi.bigroup.life.views.fonts.TextViewRobotoMedium
                    android:id="@+id/tv_help"
                    style="@style/WW"
                    android:layout_marginLeft="@dimen/dp_8"
                    android:text="@string/help"
                    android:textColor="@color/help"
                    android:textSize="@dimen/sp_13"/>

            </LinearLayout>

        </LinearLayout>

        <bi.bigroup.life.views.fonts.TextViewRobotoRegular
            android:id="@+id/tv_bi_group_year"
            style="@style/MW"
            android:layout_marginBottom="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"
            android:gravity="center"
            android:text="@string/copyright"
            android:textColor="@color/bi_group"
            android:textSize="@dimen/sp_13"/>

    </LinearLayout>

    <include
        android:id="@+id/pb_indicator"
        layout="@layout/inc_pb_transparent"/>

</FrameLayout>