<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fl_parent"
    style="@style/MM"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <LinearLayout
        style="@style/LL_MM_V"
        android:gravity="center_horizontal">

        <LinearLayout
            style="@style/LL_MW_H"
            android:layout_marginTop="@dimen/dp_15"
            android:gravity="center_vertical">

            <bi.bigroup.life.views.fonts.TextViewRobotoMedium
                style="@style/PARENT_TITLE"
                android:layout_marginTop="@dimen/dp_0"
                android:layout_weight="1"
                android:text="@string/new_task"/>

            <ImageView
                android:id="@+id/img_close"
                style="@style/WW"
                android:layout_marginRight="@dimen/dp_15"
                android:src="@drawable/close_circle_dark"/>
        </LinearLayout>

        <View
            style="@style/PARENT_DIVIDER"/>

        <ScrollView
            style="@style/MW"
            android:paddingLeft="@dimen/dp_15"
            android:paddingRight="@dimen/dp_15">

            <LinearLayout
                style="@style/LL_MW_V"
                android:paddingBottom="@dimen/dp_20">

                <bi.bigroup.life.views.edittext.SettingsEditText
                    android:id="@+id/et_title"
                    style="@style/MW"
                    android:hint="@string/label_title"
                    android:inputType="text"
                    android:textColorHint="@color/et_hint_subject"
                    android:textSize="@dimen/sp_16"/>

                <LinearLayout
                    style="@style/LL_MW_H"
                    android:layout_marginTop="@dimen/dp_8"
                    android:gravity="center_vertical">

                    <CheckBox
                        android:id="@+id/cb_all_day"
                        style="@style/checkBoxStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/label_notifications"/>

                    <bi.bigroup.life.views.edittext.SettingsEditText
                        android:id="@+id/et_notification"
                        style="@style/WW"
                        android:layout_marginLeft="@dimen/dp_15"
                        android:clickable="false"
                        android:cursorVisible="false"
                        android:drawableRight="@drawable/arrow_down"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:hint="@string/label_notifications"
                        android:inputType="text"
                        android:textColorHint="@color/et_hint_subject"
                        android:textSize="@dimen/sp_16"/>

                </LinearLayout>

                <bi.bigroup.life.views.fonts.TextViewRobotoRegular
                    style="@style/MW"
                    android:layout_marginTop="@dimen/dp_5"
                    android:text="@string/start_date"
                    android:textColor="@color/et_hint_subject"
                    android:textSize="@dimen/sp_12"/>

                <bi.bigroup.life.views.edittext.SettingsEditText
                    android:id="@+id/et_start_date"
                    style="@style/MW"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:drawableRight="@drawable/arrow_down"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/start_date"
                    android:inputType="text"
                    android:textColorHint="@color/et_hint_subject"
                    android:textSize="@dimen/sp_16"
                    tools:text="13.03.2018 02:53"/>

                <bi.bigroup.life.views.fonts.TextViewRobotoRegular
                    style="@style/MW"
                    android:layout_marginTop="@dimen/dp_8"
                    android:text="@string/end_date"
                    android:textColor="@color/et_hint_subject"
                    android:textSize="@dimen/sp_12"/>

                <bi.bigroup.life.views.edittext.SettingsEditText
                    android:id="@+id/et_end_date"
                    style="@style/MW"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:drawableRight="@drawable/arrow_down"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/end_date"
                    android:inputType="text"
                    android:textColorHint="@color/et_hint_subject"
                    android:textSize="@dimen/sp_16"
                    tools:text="13.03.2018 02:53"/>

                <bi.bigroup.life.views.edittext.SettingsEditText
                    android:id="@+id/et_performer"
                    style="@style/MW"
                    android:layout_marginTop="@dimen/dp_7"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:drawableRight="@drawable/arrow_down"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/choose_performer"
                    android:inputType="text"
                    android:textColorHint="@color/et_hint_subject"
                    android:textSize="@dimen/sp_16"/>

                <bi.bigroup.life.views.edittext.SettingsEditText
                    android:id="@+id/et_add_participants"
                    style="@style/MW"
                    android:layout_marginTop="@dimen/dp_7"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:drawableRight="@drawable/arrow_down"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/add_participants"
                    android:inputType="text"
                    android:textColorHint="@color/et_hint_subject"
                    android:textSize="@dimen/sp_16"/>

                <com.zhy.view.flowlayout.TagFlowLayout
                    android:id="@+id/participants_layout"
                    style="@style/MW"
                    android:layout_marginTop="@dimen/dp_7"/>

                <bi.bigroup.life.views.edittext.SettingsEditText
                    android:id="@+id/et_task_type"
                    style="@style/MW"
                    android:layout_marginTop="@dimen/dp_7"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:drawableRight="@drawable/arrow_down"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/task_type"
                    android:inputType="text"
                    android:textColorHint="@color/et_hint_subject"
                    android:textSize="@dimen/sp_16"/>


                <LinearLayout
                    style="@style/LL_MW_V"
                    android:layout_marginTop="@dimen/dp_12"
                    android:background="@drawable/et_selector_rounded_add_content">

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/et_content"
                        style="@style/MW"
                        android:gravity="top|left"
                        android:hint="@string/write_content"
                        android:inputType="textMultiLine"
                        android:minLines="3"
                        android:paddingBottom="@dimen/dp_7"
                        android:paddingLeft="@dimen/dp_13"
                        android:paddingRight="@dimen/dp_13"
                        android:paddingTop="@dimen/dp_7"
                        android:textColorHint="@color/et_hint_subject"
                        android:textSize="@dimen/sp_16"
                        app:met_hideUnderline="true"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_attach_file"
                    style="@style/LL_MW_H"
                    android:layout_marginTop="@dimen/dp_12"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="@dimen/dp_26"
                        android:layout_height="@dimen/dp_26"
                        android:src="@drawable/ic_attach"/>

                    <bi.bigroup.life.views.fonts.TextViewRobotoMedium
                        style="@style/MW"
                        android:lineSpacingExtra="8sp"
                        android:text="@string/attach"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp_16"/>
                </LinearLayout>

                <bi.bigroup.life.views.fonts.ButtonRobotoRegular
                    android:id="@+id/btn_send"
                    style="@style/auth_rounded_btn"
                    android:layout_marginLeft="@dimen/dp_0"
                    android:layout_marginRight="@dimen/dp_0"
                    android:layout_marginTop="@dimen/dp_17"
                    android:text="@string/send"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <include
        android:id="@+id/pb_indicator"
        layout="@layout/inc_pb_transparent"/>

</FrameLayout>